objects/vlocity_cmt__Statement__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Statements</relationshipLabel>
        <relationshipName>Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdditionalDiscount__c</fullName>
        <label>Additional Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AverageTemperature__c</fullName>
        <description>Average temperature for the billing period.</description>
        <label>Average Temperature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BalanceDue__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillPeriodDays__c</fullName>
        <description>Number of days included in the current billing period.</description>
        <label>Days in Bill Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentBalance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentCharges__c</fullName>
        <label>Current Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentMeterRead__c</fullName>
        <description>Current meter read for the billing period.</description>
        <label>Current Meter Read</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Statements</relationshipLabel>
        <relationshipName>CustomerStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverdueAmount__c</fullName>
        <label>Overdue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PreviousBalance__c</fullName>
        <label>Previous Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PreviousMeterRead__c</fullName>
        <description>Meter read for the previous billing period.</description>
        <label>Previous Meter Read</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicesBilled__c</fullName>
        <label>Services Billed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementAccountstatus__c</fullName>
        <label>Statement Account status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementDate__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementDetails__c</fullName>
        <label>Statement Details</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementImageURL__c</fullName>
        <label>Statement Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementMonth__c</fullName>
        <label>Statement Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementPeriodEndDate__c</fullName>
        <label>Statement Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementPeriodStartDate__c</fullName>
        <label>Statement Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementYear__c</fullName>
        <label>Statement Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalBalanceDue__c</fullName>
        <formula>vlocity_cmt__BalanceDue__c  - (vlocity_cmt__BalanceDue__c  *  vlocity_cmt__AdditionalDiscount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalUsage__c</fullName>
        <description>Total usage for the billing period.</description>
        <label>Total Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Statement</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>